# Mandelbrot

./: .gitignore  CMakeLists.txt  CMakePresets.json  Mandelbrot.sln  imgui.ini
Mandelbrot/: Mandelbrot.vcxproj  Mandelbrot.vcxproj.filters  imgui.ini
Mandelbrot/include/: Errors.h  Renderer.h  Shader.h
Mandelbrot/include/maths/: mat2.h  mat4.h  vec2.h
Mandelbrot/res/: vertex.glsl
Mandelbrot/src/: Mandelbrot.cpp  Renderer.cpp  Shader.cpp
include/: ContextManager.h  Errors.h
res/: mandelfrag.glsl
src/: ContextManager.cpp  Errors.cpp  Mandelbrot.cpp  Shader.cpp
